fixed email spacing

--- a/style.css
+++ b/style.css
@@ -575,7 +575,7 @@ footer p {
     }
     .contact-info-container {
         margin: 0;
-
+        margin-right: 1rem;
     }
     .contact-info-container p, .nav-links li a{
         font-size: 1rem;
